I have add the ability to use electron collision parameters generated with the CKC

--- a/Makefile.srcs
+++ b/Makefile.srcs
@@ -22,6 +22,7 @@ CORESOURCES = \
 	src/predefgrid.c\
 	src/raythrucells.c\
 	src/raytrace.c\
+	src/readckc.c\
 	src/run.c\
 	src/smooth.c\
 	src/solver.c\
