--- a/Makefile.defs
+++ b/Makefile.defs
@@ -1,6 +1,9 @@
-LIB_QHULL = qhull
-CCFLAGS += -I/usr/include/cfitsio
-CCFLAGS += -I/Users/mcordine/Install/cvode-5.3.0/sundials/instdir/include
-LDFLAGS += -Wl,-rpath,/Users/mcordine/Install/cvode-5.3.0/sundials/instdir/lib
-LIBS += -L/Users/mcordine/Install/cvode-5.3.0/sundials/instdir/lib
-CC      = /opt/local/bin/gcc-mp-8 -fopenmp
+LIB_QHULL = qhullstatic
+CCFLAGS += -I/Users/kdarnell/macports/lib
+CCFLAGS += -I/Users/kdarnell/macports/lib/libgcc
+CCFLAGS += -I/Users/kdarnell/macports/include
+LDFLAGS += -Wl,-rpath,/Users/kdarnell/macports/lib
+LDFLAGS += -Wl,-rpath,/Users/kdarnell/macports/lib/libgcc
+LIBS += -L/Users/kdarnell/macports/lib
+LIBS += -L/Users/kdarnell/macports/lib/libgcc
+CC      = /Users/kdarnell/macports/bin/gcc-mp-11 -fopenmp
